--- a/class/deploy-with-docker-migration/backend/docker-compose.yaml
+++ b/class/deploy-with-docker-migration/backend/docker-compose.yaml
@@ -8,13 +8,16 @@ services:
     volumes:
       - ./src:/my_backend/src
     env_file:
-      - ./.env.stage
+      - ./.env
     ports:
       - 3000:3000
+    command: 'yarn start:dev'
 
-  my_database:
+  my_database_local:
     platform: linux/x86_64
     image: mysql:latest
     environment:
       MYSQL_DATABASE: 'myproject'
       MYSQL_ROOT_PASSWORD: 'root'
+    ports:
+      - 3306:3306
