--- a/class/deploy-with-docker-migration/backend/package.json
+++ b/class/deploy-with-docker-migration/backend/package.json
@@ -12,13 +12,17 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "prestart:prod": "yarn typeorm:migration:run",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "typeorm:migration:generate": "typeorm migration:generate --config dist/common/migrations/generate.config.js",
+    "typeorm:migration:run": "typeorm migration:run --config dist/common/migrations/run.config.js"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.18.2",
@@ -65,7 +69,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
